--- a/style.css
+++ b/style.css
@@ -613,13 +613,13 @@ html {
 }
 
 .logo-image {
-    height: 56px;   /* było 40px */
+    height: 56px;
     width: auto;
     display: block;
 }
 
 @media (max-width: 640px) {
     .logo-image {
-        height: 40px;   /* na mobile wróćmy do mniejszego rozmiaru */
+        height: 40px;
     }
 }
